# wallet-example

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
backend/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
backend/migrations/: deploy.ts
backend/programs/payments/: Cargo.toml
backend/programs/payments/src/: errors.rs  events.rs  idl.json  instructions.rs  lib.rs  processor.rs  state.rs
backend/tests/: README.md  crowdfunding.ts
backend/utils/: addressDerivation.ts  airdrop.ts  crowdfunding.ts  delay.ts  index.ts  programs.ts  timestamp.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/campaigns/: campaign-list.tsx  layout.tsx  page.tsx
src/app/payments/: layout.tsx  page.tsx  payment-list.tsx
src/components/: index.ts  mode-toggle.tsx
src/components/admin-panel/: admin-panel-layout.tsx  collapse-menu-button.tsx  content-layout.tsx  counter.tsx  footer.tsx  menu.tsx  navbar.tsx  select-network.tsx  sheet-menu.tsx  sidebar.tsx
src/components/campaigns/: campaign.tsx  donation-modal.tsx  form-create-campaign.tsx
src/components/payments/: card-payment.tsx  form-create-payment.tsx  index.tsx  payment-fee.tsx  payment-form.tsx  payment-history.tsx  payment-layout.tsx  payment-list.tsx  (+6 more)
src/hooks/: use-counter.ts  use-sidebar-toggle.ts
src/lib/: menu-list.ts
src/store/: counterStore.tsx
src/types/: payments.ts
src/utils/: delay.ts  file.ts  formatCurrency.ts  index.ts  truncateAddress.ts
(+36 files in other folders)
