[package]
name = "payments"
version = "0.1.0"
description = "Payments program created with Anchor for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payments"

[features]
default = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
solana-program = { version = "2.0.5", features = ["program"] }

[dev-dependencies]
anchor-lang = { version = "0.30.1", features = ["test-utils"] }

[target.bpfel-unknown-unknown.dependencies.std]
features = []
